- addition new government building: high prize court

--- a/main_menu/localization/english/free_harbor_buildings_l_english.yml
+++ b/main_menu/localization/english/free_harbor_buildings_l_english.yml
@@ -1,2 +1,7 @@
 l_english:
   admiralty_of_the_captains: "Admiralty Of The Captains"
+  admiralty_of_the_captains_maintenance: "Admiralty Maintenance"
+  fhl_pirate_pens_tanners_maintenance: "War-Beast Pens & Tanners Maintenance"
+  fhl_pirate_pens_tanners: "War-Beast Pens & Tanners"
+  fhl_high_prize_court: "High Prize Court"
+  fhl_high_prize_court_maintenance: "High Prize Court Maintenance"
