- localization - to test

--- a/old/main_menu/localization/english/free_harbor_buildings_l_english.yml
+++ b/old/main_menu/localization/english/free_harbor_buildings_l_english.yml
@@ -1,2 +1,5 @@
 ﻿l_english:
   admiralty_of_the_captains: "Admiralty Of The Captains"
+  admiralty_of_the_captains_maintenance: "Admiralty of the Captains Maintenance"
+  high_prize_court: "High Prize Court"
+  high_prize_court_maintenance: "High Prize Court Maintenance"
